19 July 2012: Willem
	- Fix bug#454: Remove ACX_CHECK_COMPILER_FLAG from configure.ac,
	  if CFLAGS is specified at configure time then '-g -O2' is not
	  appended to CFLAGS, so that the user can override them.

18 July 2012: Willem
	- Fix libunbound report of errors when in background mode.

11 July 2012: Willem
	- updated iana ports list.

9 July 2012: Willem
	- Add flush_bogus option for unbound-control

6 July 2012: Wouter
	- Fix validation of qtype DS queries that result in no data for
	  non-optout NSEC3 zones.

4 July 2012: Wouter
	- compile libunbound with libnss on Suse, passes regression tests.

3 July 2012: Wouter
	- FIPS_mode openssl does not use arc4random but RAND_pseudo_bytes.

2 July 2012: Wouter
	- updated iana ports list.

29 June 2012: Wouter
	- patch for unbound_munin_ script to handle arbitrary thread count by
	  Sven Ulland.

28 June 2012: Wouter
	- detect if openssl has FIPS_mode.
	- code review: return value of cache_store can be ignored for better
	  performance in out of memory conditions.
	- fix edns-buffer-size and msg-buffer-size manpage documentation.
	- updated iana ports list.

25 June 2012: Wouter
	- disable RSAMD5 if in FIPS mode (for openssl and for libnss).

22 June 2012: Wouter
	- implement DS records, NSEC3 and ECDSA for compile with libnss.

21 June 2012: Wouter
	- fix error handling of alloc failure during rrsig verification.
	- nss check for verification failure.
	- nss crypto works for RSA and DSA.

20 June 2012: Wouter
	- work on --with-nss build option (for now, --with-libunbound-only).

19 June 2012: Wouter
	- --with-libunbound-only build option, only builds the library and
	  not the daemon and other tools.

18 June 2012: Wouter
	- code review.

15 June 2012: Wouter
	- implement log-time-ascii on windows.
	- The key-cache bad key ttl is now 60 seconds.
	- updated iana ports list.
	- code review.

11 June 2012: Wouter
	- bug #452: fix crash on assert in mesh_state_attachment.

30 May 2012: Wouter